--- a/PatientMonitor/Bedside monitor.xaml
+++ b/PatientMonitor/Bedside monitor.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="PatientMonitor.MainWindow"
+﻿<Window x:Class="PatientMonitor.BedsideMonitoringStation"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Central Monitorig System" Height="899.204" Width="1443.674" xmlns:my="clr-namespace:PatientMonitor" Loaded="Window_Loaded">
@@ -92,15 +92,15 @@
         <Label Content="0" Height="44" HorizontalAlignment="Left" Margin="589,485,0,0" x:Name="systolic7" VerticalAlignment="Top" Width="86" FontSize="28" Foreground="Cyan" />
         <Label Content="0" Height="44" HorizontalAlignment="Left" Margin="727,490,0,0" x:Name="diastolic7" VerticalAlignment="Top" Width="86" FontSize="28" Foreground="Cyan" />
         <Label Content="0" Height="44" HorizontalAlignment="Left" Margin="834,485,0,0" x:Name="temperature7" VerticalAlignment="Top" Width="86" FontSize="28" Foreground="Cyan" />
-        <Button x:Name="MuteAlarmbutton" Content="Mute" HorizontalAlignment="Left" Margin="1159,339,0,0" VerticalAlignment="Top" Width="75" Click="MuteAlarmbutton_Click"/>
-        <TextBox  Name="txtNHS" HorizontalAlignment="Left" Height="28" Margin="1087,100,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="115"/>
-        <TextBox Name="txtName" HorizontalAlignment="Left" Height="28" Margin="1087,154,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="115"/>
-        <TextBox Name="txtBed" HorizontalAlignment="Left" Height="28" Margin="1087,205,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="115"/>
-        <Button Name="buttonAddPatient" Content="Add New" HorizontalAlignment="Left" Height="28" Margin="1281,100,0,0" VerticalAlignment="Top" Width="81" Click="buttonAddPatient_Click"/>
-        <Button Name="buttonDeletePatient" Content="Delete" HorizontalAlignment="Left" Height="28" Margin="1281,154,0,0" VerticalAlignment="Top" Width="81" Click="buttonDeletePatient_Click" />
-        <Label Content="NHS number:" HorizontalAlignment="Left" Height="32" Margin="993,101,0,0" VerticalAlignment="Top" Width="94"/>
-        <Label Content="Name:" HorizontalAlignment="Left" Height="28" Margin="1024,154,0,0" VerticalAlignment="Top" Width="45"/>
-        <Label Content="Bed No:" HorizontalAlignment="Left" Height="25" Margin="1024,207,0,0" VerticalAlignment="Top" Width="58"/>
+        <Button x:Name="MuteAlarmbutton" Content="Mute" HorizontalAlignment="Left" Margin="1188,492,0,0" VerticalAlignment="Top" Width="75" Click="MuteAlarmbutton_Click"/>
+        <TextBox  Name="txtNHS" HorizontalAlignment="Left" Height="28" Margin="1071,204,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="115"/>
+        <TextBox Name="txtName" HorizontalAlignment="Left" Height="28" Margin="1071,258,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="115"/>
+        <TextBox Name="txtBed" HorizontalAlignment="Left" Height="28" Margin="1071,309,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="115"/>
+        <Button Name="buttonAddPatient" Content="Add New" HorizontalAlignment="Left" Height="28" Margin="1265,204,0,0" VerticalAlignment="Top" Width="81" Click="buttonAddPatient_Click"/>
+        <Button Name="buttonDeletePatient" Content="Delete" HorizontalAlignment="Left" Height="28" Margin="1265,258,0,0" VerticalAlignment="Top" Width="81" Click="buttonDeletePatient_Click" />
+        <Label Content="NHS number:" HorizontalAlignment="Left" Height="32" Margin="977,205,0,0" VerticalAlignment="Top" Width="94"/>
+        <Label Content="Name:" HorizontalAlignment="Left" Height="28" Margin="1008,258,0,0" VerticalAlignment="Top" Width="45"/>
+        <Label Content="Bed No:" HorizontalAlignment="Left" Height="25" Margin="1008,311,0,0" VerticalAlignment="Top" Width="58"/>
         <DataGrid x:Name="patientDataGrid" AutoGenerateColumns="False" EnableRowVirtualization="True" ItemsSource="{Binding}" Margin="10,159,1111,315" RowDetailsVisibilityMode="VisibleWhenSelected" FontSize="28">
             <DataGrid.Columns>
                 <DataGridTextColumn x:Name="nHSNoColumn" Binding="{Binding NHSNo}" Header="NHSNo" Width="SizeToHeader" FontSize="28"/>
@@ -159,17 +159,21 @@
             <Label Content="Name:" Grid.Column="0" HorizontalAlignment="Left" Margin="-104,-18,0,24" Grid.Row="0" VerticalAlignment="Center"/>
             <TextBox x:Name="nameTextBox2" HorizontalAlignment="Left" Height="23" Margin="-54,-16,0,25" Grid.Row="0" Text="{Binding Name, Mode=TwoWay, NotifyOnValidationError=true, ValidatesOnExceptions=true}" VerticalAlignment="Center" Width="120" Grid.ColumnSpan="2"/>
         </Grid>
-        <ComboBox x:Name="mutePatientSelector" HorizontalAlignment="Left" Margin="1024,337,0,0" VerticalAlignment="Top" Width="120" SelectedValuePath="Content">
-        <ComboBoxItem Name="Bed1" >1</ComboBoxItem>
-        <ComboBoxItem Name="Bed2" >2</ComboBoxItem>
-        <ComboBoxItem Name="Bed3" >3</ComboBoxItem>
-        <ComboBoxItem Name="Bed4" >4</ComboBoxItem>
-        <ComboBoxItem Name="Bed5" >5</ComboBoxItem>
-        <ComboBoxItem Name="Bed6" >6</ComboBoxItem>
-        <ComboBoxItem Name="Bed7" >7</ComboBoxItem>
-        <ComboBoxItem Name="Bed8" >8</ComboBoxItem>
+        <ComboBox x:Name="mutePatientSelector" HorizontalAlignment="Left" Margin="1053,490,0,0" VerticalAlignment="Top" Width="120" SelectedValuePath="Content">
+            <ComboBoxItem Name="Bed1" >1</ComboBoxItem>
+            <ComboBoxItem Name="Bed2" >2</ComboBoxItem>
+            <ComboBoxItem Name="Bed3" >3</ComboBoxItem>
+            <ComboBoxItem Name="Bed4" >4</ComboBoxItem>
+            <ComboBoxItem Name="Bed5" >5</ComboBoxItem>
+            <ComboBoxItem Name="Bed6" >6</ComboBoxItem>
+            <ComboBoxItem Name="Bed7" >7</ComboBoxItem>
+            <ComboBoxItem Name="Bed8" >8</ComboBoxItem>
         </ComboBox>
-        <Label Content="Bed number:" HorizontalAlignment="Left" Height="24" Margin="1024,308,0,0" VerticalAlignment="Top" Width="120"/>
+        <Label Content="Bed number:" HorizontalAlignment="Left" Height="24" Margin="1053,461,0,0" VerticalAlignment="Top" Width="120"/>
+        <Border BorderBrush="Black" BorderThickness="1" HorizontalAlignment="Left" Height="220" Margin="944,153,0,0" VerticalAlignment="Top" Width="443"/>
+        <Label Content="Add or remove patient from bay" HorizontalAlignment="Left" Height="46" Margin="1008,153,0,0" VerticalAlignment="Top" Width="308" FontSize="20"/>
+        <Border BorderBrush="Black" BorderThickness="1" HorizontalAlignment="Left" Height="136" Margin="944,402,0,0" VerticalAlignment="Top" Width="443"/>
+        <Label Content="Mute alarm" HorizontalAlignment="Left" Height="27" Margin="1116,416,0,0" VerticalAlignment="Top" Width="96" FontSize="16"/>
 
     </Grid>
 </Window>
