--- a/PatientMonitor/Central station.xaml
+++ b/PatientMonitor/Central station.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="PatientMonitor.monitoringandalarmdetails"
+﻿<Window x:Class="PatientMonitor.CentralMonitoringStation"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Monitoring and Alarm Details" Height="704" Width="1139.55" xmlns:my="clr-namespace:PatientMonitor" Loaded="Window_Loaded">
@@ -11,7 +11,7 @@
         <Label Name="lblSent" Height="29" Width="145" FontSize="11" FontFamily="Microsoft Sans Serif" TabIndex="33" Visibility="Hidden" Foreground="White" Background="Red" Margin="534,500,116,32" HorizontalAlignment="Right" VerticalAlignment="Bottom" >MESSAGE SENT</Label>
         <Label Name="label11" Height="22" Width="9" FontSize="11" FontFamily="Microsoft Sans Serif" TabIndex="18"  Margin="76,486,710,53" HorizontalAlignment="Right" VerticalAlignment="Bottom" ></Label>
         <Label Name="label4" Height="58" Width="265" FontSize="18.667" FontFamily="Microsoft Sans Serif" TabIndex="6" Foreground="Black" Background="White" Margin="0,0,832.065,554.228" HorizontalAlignment="Right" VerticalAlignment="Bottom" >Monitoring and Alarm Details</Label>
-        <Button x:Name="btnLogOut" Content="Log Out" HorizontalAlignment="Left" Height="29" Margin="505,492,0,0" VerticalAlignment="Top" Width="111" Click="btnLogOut_Click" />
+        <Button x:Name="btnLogOut" Content="Log Out" HorizontalAlignment="Left" Height="29" Margin="505,511,0,0" VerticalAlignment="Top" Width="111" Click="btnLogOut_Click" />
         <Grid Height="327" Width="446" Margin="30,150,631.065,160.228">
             <my:NumericUpDown HorizontalAlignment="Left" Margin="227,39,0,0" x:Name="heartRateLower" VerticalAlignment="Top" />
             <my:NumericUpDown HorizontalAlignment="Left" Margin="227,90,0,0" x:Name="breathingRateLower" VerticalAlignment="Top" />
@@ -25,13 +25,13 @@
             <Label Content="Upper Limits" Height="28" HorizontalAlignment="Left" Margin="332,6,0,0" Name="label6" VerticalAlignment="Top" ClipToBounds="False" />
             <my:NumericUpDown HorizontalAlignment="Left" Margin="227,243,0,0" x:Name="temperatureLower" VerticalAlignment="Top" />
             <my:NumericUpDown HorizontalAlignment="Left" Margin="333,243,0,0" x:Name="temperatureUpper" VerticalAlignment="Top" />
-            <Label Content="Heart Rate" Height="44" HorizontalAlignment="Left" Margin="12,39,0,0" Name="label1" VerticalAlignment="Top" Width="117" FontSize="14" />
-            <Label Content="Breathing Rate" Height="44" HorizontalAlignment="Left" Margin="12,90,0,0" Name="label2" VerticalAlignment="Top" Width="117" FontSize="14" />
-            <Label Content="Systolic Pressure" Height="44" HorizontalAlignment="Left" Margin="12,141,0,0" Name="label3" VerticalAlignment="Top" Width="117" ClipToBounds="True" FontSize="14" />
-            <Label Content="Diastolic Pressure" Height="44" HorizontalAlignment="Left" Margin="12,192,0,0" Name="label14" VerticalAlignment="Top" Width="117" FontSize="14" />
-            <Label Content="Temperature" Height="44" HorizontalAlignment="Left" Margin="12,243,0,0" Name="label7" VerticalAlignment="Top" Width="117" FontSize="14" />
+            <Label Content="Heart Rate" Height="44" HorizontalAlignment="Left" Margin="84,39,0,0" Name="label1" VerticalAlignment="Top" Width="117" FontSize="14" />
+            <Label Content="Breathing Rate" Height="44" HorizontalAlignment="Left" Margin="84,90,0,0" Name="label2" VerticalAlignment="Top" Width="117" FontSize="14" />
+            <Label Content="Systolic Pressure" Height="44" HorizontalAlignment="Left" Margin="84,141,0,0" Name="label3" VerticalAlignment="Top" Width="117" ClipToBounds="True" FontSize="14" />
+            <Label Content="Diastolic Pressure" Height="44" HorizontalAlignment="Left" Margin="84,192,0,0" Name="label14" VerticalAlignment="Top" Width="117" FontSize="14" />
+            <Label Content="Temperature" Height="44" HorizontalAlignment="Left" Margin="84,243,0,0" Name="label7" VerticalAlignment="Top" Width="117" FontSize="14" />
         </Grid>
-        <ComboBox  x:Name="patientSelector" Height="21" HorizontalAlignment="Left" Margin="655,246,0,0"  VerticalAlignment="Top" Width="129" SelectedValuePath="Content" >
+        <ComboBox  x:Name="patientSelector" Height="21" HorizontalAlignment="Left" Margin="488,193,0,0"  VerticalAlignment="Top" Width="129" SelectedValuePath="Content" >
             <ComboBoxItem Name="Bed1" >1</ComboBoxItem>
             <ComboBoxItem Name="Bed2" >2</ComboBoxItem>
             <ComboBoxItem Name="Bed3" >3</ComboBoxItem>
@@ -49,8 +49,8 @@
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
-            <Label Content="Name:" Grid.Column="0" HorizontalAlignment="Left" Margin="79,194,0,-188" Grid.Row="0" VerticalAlignment="Center" Grid.ColumnSpan="2"/>
-            <TextBox x:Name="nameTextBox" Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="140,197,-134,-188" Grid.Row="0" Text="{Binding Name, Mode=TwoWay, NotifyOnValidationError=true, ValidatesOnExceptions=true}" VerticalAlignment="Center" Width="120"/>
+            <Label Content="Name:" Grid.Column="0" HorizontalAlignment="Left" Margin="-72,142,0,-136" Grid.Row="0" VerticalAlignment="Center"/>
+            <TextBox x:Name="nameTextBox" Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="5,145,0,-136" Grid.Row="0" Text="{Binding Name, Mode=TwoWay, NotifyOnValidationError=true, ValidatesOnExceptions=true}" VerticalAlignment="Center" Width="120"/>
         </Grid>
         <Grid x:Name="grid2" DataContext="{StaticResource patientViewSource}" HorizontalAlignment="Left" Margin="897,95,0,0" VerticalAlignment="Top">
             <Grid.ColumnDefinitions>
@@ -60,8 +60,8 @@
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
-            <Label Content="NHSNo:" Grid.Column="0" HorizontalAlignment="Left" Margin="-100,152,0,-146" Grid.Row="0" VerticalAlignment="Center"/>
-            <TextBox x:Name="nHSNoTextBox" HorizontalAlignment="Left" Height="23" Margin="-32,152,-22,-143" Grid.Row="0" Text="{Binding NHSNo, Mode=TwoWay, NotifyOnValidationError=true, ValidatesOnExceptions=true}" VerticalAlignment="Center" Width="120" Grid.ColumnSpan="2"/>
+            <Label Content="NHSNo:" Grid.Column="0" HorizontalAlignment="Left" Margin="-248,98,0,-92" Grid.Row="0" VerticalAlignment="Center"/>
+            <TextBox x:Name="nHSNoTextBox" HorizontalAlignment="Left" Height="23" Margin="-168,101,0,-92" Grid.Row="0" Text="{Binding NHSNo, Mode=TwoWay, NotifyOnValidationError=true, ValidatesOnExceptions=true}" VerticalAlignment="Center" Width="120"/>
         </Grid>
         <Grid x:Name="grid3" DataContext="{StaticResource patientViewSource}" HorizontalAlignment="Left" Margin="793,156,0,0" VerticalAlignment="Top">
             <Grid.ColumnDefinitions>
@@ -71,10 +71,10 @@
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
-            <Label Content="Bed No:" Grid.Column="0" HorizontalAlignment="Left" Margin="-2,174,0,-168" Grid.Row="0" VerticalAlignment="Center"/>
-            <TextBox x:Name="bedNoTextBox" Grid.Column="1" HorizontalAlignment="Left" Height="24" Margin="23,174,-17,-166" Grid.Row="0" Text="{Binding BedNo, Mode=TwoWay, NotifyOnValidationError=true, ValidatesOnExceptions=true}" VerticalAlignment="Center" Width="120"/>
+            <Label Content="Bed No:" Grid.Column="0" HorizontalAlignment="Left" Margin="-142,122,0,-116" Grid.Row="0" VerticalAlignment="Center"/>
+            <TextBox x:Name="bedNoTextBox" Grid.Column="1" HorizontalAlignment="Left" Height="24" Margin="-62,122,0,-114" Grid.Row="0" Text="{Binding BedNo, Mode=TwoWay, NotifyOnValidationError=true, ValidatesOnExceptions=true}" VerticalAlignment="Center" Width="119"/>
         </Grid>
-        <Label x:Name="label" Content="Select bed:" HorizontalAlignment="Left" Height="25" Margin="672,216,0,0" VerticalAlignment="Top" Width="96"/>
+        <Label x:Name="label" Content="Select patient bed:" HorizontalAlignment="Left" Height="25" Margin="504,163,0,0" VerticalAlignment="Top" Width="112"/>
         <Grid x:Name="grid4" DataContext="{StaticResource registrationViewSource}" HorizontalAlignment="Left" Margin="410,30,0,0" VerticalAlignment="Top">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"/>
@@ -84,5 +84,8 @@
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
         </Grid>
+        <Border BorderBrush="Black" BorderThickness="1" HorizontalAlignment="Left" Height="347" Margin="74,108,0,0" VerticalAlignment="Top" Width="969">
+            <Label Content="Change patient alarm levels" HorizontalAlignment="Left" Height="31" Margin="415,9,0,0" VerticalAlignment="Top" Width="227" FontSize="16"/>
+        </Border>
     </Grid>
 </Window>
